Add interactive demo page for embryo analysis

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
             </nav>
             <div class="cta-button mobile-hidden">
-                <a href="#contact" class="button">Request Demo</a>
+                <a href="demo.html" class="button">Try Demo</a>
             </div>
             <div class="hamburger">
                 <span></span>
@@ -59,7 +59,7 @@
                 <p>Enhancing success rates through AI-powered analysis while ensuring complete patient data privacy with federated learning technology.</p>
                 <div class="hero-buttons">
                     <a href="#contact" class="button primary">Get Started</a>
-                    <a href="#technology" class="button secondary">Learn More</a>
+                    <a href="demo.html" class="button secondary">Try Demo</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -235,9 +235,9 @@
             <div class="cta-content">
                 <h2>Ready to enhance your embryo selection process?</h2>
                 <p>Join leading fertility clinics already benefiting from EmbrAI's technology.</p>
-                <a href="#contact" class="button primary">
+                <a href="demo.html" class="button primary">
                     <span class="loading-spinner"></span>
-                    Schedule a Demo
+                    Try Interactive Demo
                 </a>
             </div>
         </div>
