Add federated learning page, update model handler, add download scripts

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#technology">Technology</a></li>
                     <li><a href="#benefits">Benefits</a></li>
+                    <li><a href="federated-learning.html">For Clinics</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
