--- a/demo.html
+++ b/demo.html
@@ -33,6 +33,7 @@
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#technology">Technology</a></li>
                     <li><a href="index.html#benefits">Benefits</a></li>
+                    <li><a href="federated-learning.html">For Clinics</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
